# docker-introduction

./: add.py  pyproject.toml  try.py
api_dictionnaire/: .dockerignore  Dockerfile  main.py
api_exemple/: Dockerfile  main.py  read.me  requirements.txt  test_api.py
api_sqlite/: Dockerfile  requirements.txt  simple.py  test_simple.py
api_sqlite/app/data/: shopping_list.db
api_sqlite/data/: shopping_list.db
api_sqlite/real_project/: crud.py  database.py  main.py  models.py
api_sqlite_package/: Dockerfile
api_sqlite_package/app/: crud.py  database.py  main.py  models.py  test_api.py  test_crud.py
api_sqlite_package/app/data/: shopping_list.db
api_sqlite_simple/: Dockerfile_2  simple.py
exercice_1_1/: Dockerfile
exercice_1_2/: Dockerfile  main.py
exercice_1_3/: Dockerfile  main.py
