[tool.poetry]
name = "docker introduction"
version = "0.1.0"
description = ""
authors = ["charles-42 <71760090+charles-42@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
pytest = "^8.2.2"
watchdog = "^4.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
